--- a/package.json
+++ b/package.json
@@ -8,19 +8,30 @@
   },
   "author": "Bowden Kelly",
   "license": "MIT",
+  "lint-staged": {
+    "./**/*.ts": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "scripts": {
     "start": "npm run serve",
+    "dev": "nodemon --inspect dist/server.js",
     "build": "npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest --forceExit --coverage --verbose",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
+    "build-ts": "./node_modules/typescript/bin/tsc",
+    "watch-ts": "./node_modules/typescript/bin/tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "ts-node copyStaticAssets.ts"
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "precommit": "lint-staged"
   },
   "dependencies": {
+    "@slack/client": "^4.1.0",
+    "@types/lodash": "^4.14.106",
+    "@types/morgan": "^1.7.35",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
@@ -31,8 +42,9 @@
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
     "jshint": "^2.9.5",
+    "lodash": "^4.17.5",
     "lusca": "^1.5.2",
-    "slackbots": "^1.1.0",
+    "morgan": "^1.9.0",
     "winston": "^2.4.0"
   },
   "devDependencies": {
@@ -50,9 +62,12 @@
     "@types/shelljs": "^0.7.8",
     "@types/winston": "^2.3.7",
     "concurrently": "^3.5.1",
+    "husky": "^0.14.3",
     "jest": "^22.0.4",
+    "lint-staged": "^7.0.3",
     "node-sass": "^4.7.2",
     "nodemon": "^1.13.0",
+    "prettier": "1.11.1",
     "shelljs": "^0.8.1",
     "supertest": "^3.0.0",
     "ts-jest": "^22.0.4",
